--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -51,6 +51,19 @@ android {
         versionName flutterVersionName
     }
 
+    flavorDimensions "default"
+    productFlavors {
+        production {
+            dimension "default"
+            resValue "string", "app_name", "MedLink Production"
+        }
+        development {
+            dimension "default"
+            applicationIdSuffix ".dev"
+            resValue "string", "app_name", "MedLink Development"
+        }
+    }
+
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
